Mostrar Palavra e Teclas certas ou erradas

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <div class="letter">Q</div>
                 <div class="letter">W</div>
                 <div class="letter">E</div>
-                <div class="letter right">R</div>
-                <div class="letter wrong">T</div>
+                <div class="letter">R</div>
+                <div class="letter">T</div>
                 <div class="letter">Y</div>
                 <div class="letter">U</div>
                 <div class="letter">I</div>
