Desenho da Forca

--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="forca"></div>
-        <div class="palavra">
-            <h2 class="word">TESTE</h2>
+        <div class="container-forca">
+            <div class="forca">
+                <img src="images/forca.png" class="img">
+                <img src="images/forca1.png" class="img">
+                <img src="images/forca2.png" class="img">
+                <img src="images/forca3.png" class="img">
+                <img src="images/forca4.png" class="img">
+                <img src="images/forca5.png" class="img">
+                <img src="images/forca6.png" class="img">
+            </div>
+            <div class="palavra">
+                <h2 class="word"></h2>
+            </div>
         </div>
         <div class="keyboard">
             <div class="row1">
