Checagem se perdeu ou ganhou

--- a/index.html
+++ b/index.html
@@ -58,5 +58,12 @@
             </div>
         </div>
     </div> 
+    <div id="Modal" class="modal">
+        <div class="modal-content">
+          <p class="frase"></p>
+          <button class="btn" onclick="jogarNovamente()">Jogar novamente</button>
+        </div>
+      
+      </div>
 </body>
 </html>
