--- a/index.html
+++ b/index.html
@@ -25,36 +25,36 @@
         </div>
         <div class="keyboard">
             <div class="row1">
-                <div class="letter">Q</div>
-                <div class="letter">W</div>
-                <div class="letter">E</div>
-                <div class="letter">R</div>
-                <div class="letter">T</div>
-                <div class="letter">Y</div>
-                <div class="letter">U</div>
-                <div class="letter">I</div>
-                <div class="letter">O</div>
-                <div class="letter">P</div>
+                <div class="letter" id="letter">Q</div>
+                <div class="letter" id="letter">W</div>
+                <div class="letter" id="letter">E</div>
+                <div class="letter" id="letter">R</div>
+                <div class="letter" id="letter">T</div>
+                <div class="letter" id="letter">Y</div>
+                <div class="letter" id="letter">U</div>
+                <div class="letter" id="letter">I</div>
+                <div class="letter" id="letter">O</div>
+                <div class="letter" id="letter">P</div>
             </div>
             <div class="row2">
-                <div class="letter">A</div>
-                <div class="letter">S</div>
-                <div class="letter">D</div>
-                <div class="letter">F</div>
-                <div class="letter">G</div>
-                <div class="letter">H</div>
-                <div class="letter">J</div>
-                <div class="letter">K</div>
-                <div class="letter">L</div>
+                <div class="letter" id="letter">A</div>
+                <div class="letter" id="letter">S</div>
+                <div class="letter" id="letter">D</div>
+                <div class="letter" id="letter">F</div>
+                <div class="letter" id="letter">G</div>
+                <div class="letter" id="letter">H</div>
+                <div class="letter" id="letter">J</div>
+                <div class="letter" id="letter">K</div>
+                <div class="letter" id="letter">L</div>
             </div>
             <div class="row3">
-                <div class="letter">Z</div>
-                <div class="letter">X</div>
-                <div class="letter">C</div>
-                <div class="letter">V</div>
-                <div class="letter">B</div>
-                <div class="letter">N</div>
-                <div class="letter">M</div>
+                <div class="letter" id="letter">Z</div>
+                <div class="letter" id="letter">X</div>
+                <div class="letter" id="letter">C</div>
+                <div class="letter" id="letter">V</div>
+                <div class="letter" id="letter">B</div>
+                <div class="letter" id="letter">N</div>
+                <div class="letter" id="letter">M</div>
             </div>
         </div>
     </div> 
