--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <img src="images/forca6.png" class="img">
             </div>
             <div class="palavra">
+                <h3 class="tip"><span>Dica: </span></h3>
                 <h2 class="word"></h2>
             </div>
         </div>
