--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1>Jogo da Forca</h1>
     <div class="container">
         <div class="container-forca">
             <div class="forca">
